# dream_aesthetics

./: .gitignore  README.md  docker-compose.yaml  start.sh
ai_service/: Dockerfile  app.py  requirements.txt  symmetry_analysis.py
ai_service/utils/: dynaface_analysis.py  golden_ratio_analysis.py  (+1 more)
backend/: Dockerfile  app.js  package-lock.json  package.json  server.js
database/: Diagram 2025-04-16 20-27-55.uxf  schema.sql
dynaface-main/: .flake8  .gitignore  CITATION.bib  Jenkinsfile-deploy  Jenkinsfile-lib  LICENSE.txt  README.md  build_all.sh  build_debug.ps1  build_debug.sh  support-mac.md
dynaface-main/dynaface-lib/: MANIFEST.in  README.md  __pyinstaller.py  setup.cfg
dynaface-main/dynaface-lib/dynaface/: __init__.py  facial.py  image.py  lateral.py  measures.py  models.py  util.py
dynaface-main/dynaface-lib/dynaface/__pyinstaller/: __init__.py  hook-dynaface.py
dynaface-main/dynaface-lib/dynaface/spiga/data/loaders/: dl_config.py  transforms.py
dynaface-main/dynaface-lib/dynaface/spiga/data/loaders/augmentors/: landmarks.py  modern_posit.py  utils.py
dynaface-main/dynaface-lib/dynaface/spiga/inference/: config.py  framework.py  pretreatment.py
dynaface-main/dynaface-lib/dynaface/spiga/models/: spiga.py
dynaface-main/dynaface-lib/dynaface/spiga/models/cnn/: cnn_multitask.py  coord_conv.py  hourglass.py  layers.py  transform_e2p.py
dynaface-main/dynaface-lib/dynaface/spiga/models/gnn/: gat.py  layers.py  pose_proj.py  step_regressor.py
dynaface-main/dynaface-lib/dynaface/spiga/models/weights/: README.md
dynaface-main/dynaface-lib/examples/: dynaface_intro.ipynb  facepoints.py  process_image.py  process_media.py  quick_test.py  video.py
dynaface-main/dynaface-lib/tests/: test_dl_config.py  test_dynaface.py  test_facial.py  test_image.py  test_persist.py  test_util.py  test_zero_tupple.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
k8s/: ai-service-deployment-local.yaml  ai-service-deployment.yaml  backend-deployment-local.yaml  backend-deployment.yaml  frontend-deployment-local.yaml  frontend-deployment.yaml  mysql-deployment.yaml  namespace.yaml
(+105 files in other folders)
