[metadata]
name = dynaface
version = 0.2.1
url = https://github.com/jeffheaton/dynaface
author = Jeff Heaton
author_email = jeff@jeffheaton.com
description = Facial landmark analysis and symmetry measurement tool for facial paralysis.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
    Natural Language :: English
    Topic :: Scientific/Engineering :: Image Recognition
    Operating System :: OS Independent
keywords = facial landmarks, symmetry, paralysis, face detection, image analysis
project_urls =
    Documentation = https://github.com/jeffheaton/dynaface
    Source = https://github.com/jeffheaton/dynaface
    Bug Tracker = https://github.com/jeffheaton/dynaface/issues

[options]
packages = find:
install_requires =
    opencv-python>=4.7.0
    Pillow>=8.4.0
    matplotlib>=3.7.1
    scikit-learn>=1.2.2
    onnxruntime>=1.21.0
    rembg>=2.0.0
    facenet-pytorch
include_package_data = true
python_requires = >=3.10

[options.package_data]
dynaface = 
    spiga/data/annotations/**/*
    spiga/models/weights/**/*
    spiga/data/models3D/*.txt

[options.entry_points]
pyinstaller40 =
    hook-dirs = dynaface.__pyinstaller:get_hook_dirs
    tests = dynaface.__pyinstaller:get_PyInstaller_tests

[options.extras_require]
test =
    pytest
    pytest-cov
    coverage

lint =
    flake8
    mypy
    bandit
    black
    isort

dev =
    mypy
    types-pillow
    types-requests
    types-setuptools
    types-pyinstaller

[mypy]
files = dynaface/**/*.py
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
warn_return_any = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unreachable = True
strict_optional = True